// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ProgressTracker renders multiple progress-steps when provided in the items prop 1`] = `
<ol
  className="progress-tracker"
>
  <li
    className={null}
    key="0"
  >
    <span>
      test #1
    </span>
  </li>
  <li
    className={null}
    key="1"
  >
    <span>
      test #2
    </span>
  </li>
  <li
    className="active"
    key="2"
  >
    <span>
      test #3
    </span>
  </li>
  <li
    className={null}
    key="3"
  >
    <span>
      test #4
    </span>
  </li>
</ol>
`;

exports[`Component: ProgressTracker renders progress-tracker with the provided items in the items prop 1`] = `
<ol
  className="progress-tracker"
>
  <li
    className={null}
    key="0"
  >
    <span>
      test
    </span>
  </li>
</ol>
`;

exports[`Component: ProgressTracker renders progress-tracker with the provided items in the items prop and an active step 1`] = `
<ol
  className="progress-tracker"
>
  <li
    className={null}
    key="0"
  >
    <span>
      test #1
    </span>
  </li>
  <li
    className="active"
    key="1"
  >
    <span>
      test #2
    </span>
  </li>
</ol>
`;

exports[`Component: ProgressTracker renders progress-tracker with the provided items wrapped in anchor tags when href is provided in the items prop 1`] = `
<ol
  className="progress-tracker"
>
  <li
    className={null}
    key="0"
  >
    <a
      href="www.example.com"
    >
      test
    </a>
  </li>
</ol>
`;

exports[`Component: ProgressTracker renders with class progress-tracker-sm when provided the prop small 1`] = `
<ol
  className="progress-tracker progress-tracker-sm"
>
  <DefaultItems />
</ol>
`;

exports[`Component: ProgressTracker renders with default items when no items is provided through items prop 1`] = `
<ol
  className="progress-tracker"
>
  <DefaultItems />
</ol>
`;
